--- a/F1nalLap/angular.json
+++ b/F1nalLap/angular.json
@@ -34,7 +34,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "src/assets/scripts/barra_deslizante.js"
+            ],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
