Mostramos circuitos en página

--- a/F1nalLap/angular.json
+++ b/F1nalLap/angular.json
@@ -38,8 +38,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "src/assets/js/barra_deslizante.js",
-              "src/assets/js/tarjetas.js"
+              "src/assets/js/barra_deslizante.js"
             ]
           },
           "configurations": {
