Cambios en la funcionalidad y visualización

--- a/F1nalLap/angular.json
+++ b/F1nalLap/angular.json
@@ -56,7 +56,12 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "sourceMap": {
+                "scripts": true,
+                "styles": true,
+                "vendor": true
+              }
             },
             "development": {
               "optimization": false,
