--- a/F1nalLap/package.json
+++ b/F1nalLap/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
+    "@swimlane/ngx-charts": "^21.1.3",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
-    "express": "^4.18.2",
+    "d3": "^7.9.0",
+    "express": "^4.21.2",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
